# CodexHub

./: .gitignore  AGENTS.md  CONTEXT.md  DESIGN.md  README.md  README.zh-CN.md  pytest.ini
.smoke/: issue-150-smoke.ps1
config/: build-flavors.json  catalog_policy.toml  official_model_catalog_metadata.json  providers.toml  report-quality-allowlist.json  resolved_model_limits.json
docs/: api-forwarding-debug.md  gateway-stream-compact-repair.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: Build-TauriConfig.ps1  New-ReleaseChannelPlan.ps1  Prepare-PythonRuntime.ps1  ReleaseChannel.ps1  Run-Issue160VirtualBoxSmoke.ps1  Run-RealClientE2E.ps1  Test-BuildFlavorReplacement.ps1  Test-ReleaseManifest.ps1  Test-WindowsAutostart.ps1  Test-WindowsAutostartUninstall.ps1  analyze_transport_failures.py  audit_issue_62_runtime_artifacts.py  build-windows-portable.ps1  build-windows-release.ps1  check-codex-thread-tool-surface.ps1  check_codex_task_creation_lifecycle.py  codex-mode.cmd  codex-mode.ps1  codex-tool-exposure-smoke.ps1  desktop_app_responses_capture.py  e2e-app-update.ps1  e2e_codex_app_transport.py  e2e_codex_catalog_roundtrip.py  e2e_gateway_client_matrix.py  e2e_history_online_sync.py  generate_wayfinder_final_audit.py  launch-codex-proxy-app.cmd  launch-codex-proxy-app.ps1  manual_desktop_responses_capture.py  qualify-issue-108-glm-tool-surface.ps1  qualify-issue-140-glm-native-responses-tools.ps1  replay_official_transport.py  replay_responses_transport_faults.py  report_quality_gates.py  restart-codex-proxy.ps1  run-codex-proxy.ps1  run_claude_messages_spike_smoke.py  run_issue_106_task_lifecycle.py  run_responses_disconnect_ab.py
src-python/: anthropic_messages_spike.py  atomic_io.py  bounded_event_writer.py  bucket_sync.py  catalog.py  catalog_sync.py  codex_auth.py  codex_proxy.py  codex_semantic_adapter.py  config_overlay.py  diagnostic_control.py  diagnostic_recorder.py  global_state_repair.py  history_consolidate.py  history_overlay.py  model_limits.py  probe_provider_endpoints.py  probe_upstream_format.py  protocol_translation.py  provider_registry.py  providers_config.py  proxy_telemetry.py  subagent_dynamic_dag.py  subagent_policy.py  subagent_protocol.py  subagent_scheduler.py  subagent_state.py  websocket_transport.py  worker_binding_signing.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_flavor.rs  app_updates.rs  autostart.rs  build_info.rs  catalog.rs  cli.rs  config.rs  diagnostics.rs  gateway.rs  gateway_lifecycle.rs  gateway_transaction.rs  history.rs  lock_test_fixtures.rs  main.rs  models.rs  official_refresh.rs  openai_usage.rs  proxy.rs  runtime_paths.rs  safe_file.rs  web_bridge.rs
src-tauri/src/gateway/: telemetry.rs
src-tauri/windows/: nsis-hooks.nsh
test-results/: run-retry-loop-mini.ps1  xunfei-glm52-retry-loop-mini.jsonl  xunfei-mini-1.out.txt  xunfei-mini-2.out.txt  xunfei-mini-3.out.txt  xunfei-retry-verification-report.md  xunfei-run-probe.out.txt
tests/: lock_fixtures.py  test_anthropic_messages_spike.py  test_atomic_io.py  test_bounded_event_writer.py  test_bucket_sync.py  test_catalog.py  test_catalog_sync.py  test_chat_completions_gateway.py  test_codex_auth.py  test_codex_semantic_adapter.py  test_config_overlay.py  test_diagnostic_control.py  (+34 more)
(+206 files in other folders)
